feat: add passenger
